--- a/app/src/main/res/layout/dialog_update_info_user.xml
+++ b/app/src/main/res/layout/dialog_update_info_user.xml
@@ -92,6 +92,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:paddingLeft="20dp"
+                    android:textColor="#000000"
                     android:text="Nam" />
 
                 <RadioButton
@@ -101,6 +102,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
                     android:paddingLeft="20dp"
+                    android:textColor="#000000"
                     android:text="Nữ" />
             </RadioGroup>
 
