--- a/app/src/main/res/layout/activity_create_stop_point.xml
+++ b/app/src/main/res/layout/activity_create_stop_point.xml
@@ -14,38 +14,14 @@
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
-    <RelativeLayout
+    <View
         android:id="@+id/map_layout1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="5dp"
         android:background="@null"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"/>
 
-<!--        <ImageView-->
-<!--            android:id="@+id/map_search_ic"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            app:srcCompat="@drawable/ic_search_black_24dp" />-->
-
-<!--        <EditText-->
-<!--            android:id="@+id/edt_search_addr"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            android:layout_toRightOf="@+id/map_search_ic"-->
-<!--            android:background="@null"-->
-<!--            android:hint="Tìm kiếm địa điểm ..."-->
-<!--            android:imeOptions="actionSearch"-->
-<!--            android:inputType="text"-->
-<!--            android:maxLines="1"-->
-<!--            android:paddingLeft="5dp"-->
-<!--            android:paddingTop="10dp"-->
-<!--            android:paddingBottom="10dp" />-->
-
-
-    </RelativeLayout>
     <com.mancj.materialsearchbar.MaterialSearchBar
         style="@style/MaterialSearchBarLight"
         app:mt_speechMode="false"
