--- a/app/src/main/res/layout/fragment_user_trip.xml
+++ b/app/src/main/res/layout/fragment_user_trip.xml
@@ -176,7 +176,13 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:background="#228811" />
-
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:id="@+id/progressbar_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/usertrip_listview_tour"
         android:layout_width="match_parent"
