--- a/app/src/main/res/layout/list_view_tour_review_item.xml
+++ b/app/src/main/res/layout/list_view_tour_review_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@null"
@@ -89,17 +92,15 @@
                         android:textSize="13sp" />
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/img_report_review"
+                <Spinner
+                    android:dropDownHeight="1dp"
+                    android:id="@+id/spn_report"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_warning"
+                    style="@style/SpinnerTheme"
                     android:layout_width="50dp"
-                    android:layout_height="50dp"/>
+                    android:layout_height="25dp"/>
 
             </LinearLayout>
-
-
-
 
             <TextView
                 android:textStyle="italic"
