--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,8 @@
         <item name="android:windowExitAnimation">@anim/translate_right_side</item>
     </style>
 
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/ic_menu</item>
+    </style>
+
 </resources>
