!fix srcoll list review, feedback

--- a/app/src/main/res/layout/dialog_create_stop_point.xml
+++ b/app/src/main/res/layout/dialog_create_stop_point.xml
@@ -252,7 +252,8 @@
                 android:background="@drawable/login_btn_bg"
                 android:padding="15dp"
                 android:text="Lưu"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
+                android:textStyle="bold"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
 
