--- a/app/src/main/res/layout/dialog_list_temporary_stop_point.xml
+++ b/app/src/main/res/layout/dialog_list_temporary_stop_point.xml
@@ -51,7 +51,8 @@
         android:background="@drawable/login_btn_bg"
         android:padding="15dp"
         android:text="Cập nhật danh sách điểm dừng"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
+        android:textStyle="bold"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 </LinearLayout>
