--- a/app/src/main/res/layout/fragment_home_without_btnadd.xml
+++ b/app/src/main/res/layout/fragment_home_without_btnadd.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#ffffff"
-            android:hint="Tìm kiếm theo tên tour ..."
+            android:hint="Tìm kiếm theo tên chuyến đi ..."
             android:padding="10dp"
             android:textSize="18sp" />
 
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="100"
+            android:text="..."
             android:textColor="#4CAF50"
             android:textSize="19sp"
             android:textStyle="bold" />
@@ -74,7 +74,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" tour du lịch" />
+            android:text=" chuyến đi" />
 
     </LinearLayout>
 
