--- a/app/src/main/res/layout/fragment_user_trip.xml
+++ b/app/src/main/res/layout/fragment_user_trip.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#ffffff"
-            android:hint="Tìm kiếm theo tên tour ..."
+            android:hint="Tìm kiếm theo tên chuyến đi ..."
             android:padding="10dp"
             android:textSize="18sp" />
 
